#Nmap Changelog ($Id$); -*-text-*-

o [Zenmap] Fix a crash in results search when using the dir: operator:
    AttributeError: 'SearchDB' object has no attribute 'match_dir'
  [Daniel Miller]

o [Ncat][GH#1372] Fixed an issue with Ncat -e on Windows that caused early
  termination of connections. [Alberto Garcia Illera]

o [GH#1361] Deprecate and disable the -PR (ARP ping) host discovery option. ARP
  ping is already used whenever possible, and the -PR option would not force it
  to be used in any other case. [Daniel Miller]

o [NSE][GH#1243] Added http-sap-netweaver-leak to detect SAP Netweaver Portal 
  with the Knowledge Management Unit enabled with anonymous access. [ArphanetX]

o [NSE] Collected utility functions for string processing into a new library,
  stringaux.lua. [Daniel Miller]

o [NSE][GH#1359] Fix a false-positive in http-phpmyadmin-dir-traversal when the
  server responds with 200 status to a POST request to any URI. [Francesco Soncina]

o [NSE] New vulnerability state in vulns.lua, UNKNOWN, is used to indicate that
  testing could not rule out vulnerability. [Daniel Miller]

o [NSE] New rand.lua library uses the best sources of random available on the
  system to generate random strings. [Daniel Miller]

o [NSE] Collected utility functions for manipulating and searching tables into
  a new library, tableaux.lua. [Daniel Miller]

o [GH#1355] When searching for Lua header files, actually use them where they
  are found instead of forcing /usr/include. [Fabrice Fontaine, Daniel Miller]

o [NSE][GH#1331] Script traceroute-geolocation no longer crashes when
  www.GeoPlugin.net returns null coordinates [Michal Kubenka, nnposter]

o Limit verbose -v and debugging -d levels to a maximum of 10. Nmap does not
  use higher levels internally. [Daniel Miller]

o [NSE] bin.lua is officially deprecated. Lua 5.3, added 2 years ago in Nmap
  7.25BETA2, has native support for binary data packing via string.pack and